force-app/main/default/objects/T_Performance_Target_Product_by_Sales__c/T_Performance_Target_Product_by_Sales__c.object-meta.xml
<CustomObject>
    <label>T-Performance Target Product by Sales</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>T-Performance Target Product by Sales Na</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T-Performance Target Product by Sales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>