force-app/main/default/objects/T_Performance_Target_Product_by_Sales__c/fields/Cap_Max_Pct__c.field-meta.xml
<CustomField>
    <fullName>Cap_Max_Pct__c</fullName>
    <label>Cap Maximum Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>