force-app/main/default/objects/T_Performance_Target_Product_by_Sales__c/fields/Sub_Group_Flag__c.field-meta.xml
<CustomField>
    <fullName>Sub_Group_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sub Group Flag</label>
    <type>Checkbox</type>
</CustomField>