force-app/main/default/objects/T_Performance_Target_Product_by_Sales__c/fields/Target_Point__c.field-meta.xml
<CustomField>
    <fullName>Target_Point__c</fullName>
    <label>Target Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>