force-app/main/default/objects/T_Performance_Target_Product_by_Sales__c/fields/Target_Unit__c.field-meta.xml
<CustomField>
    <fullName>Target_Unit__c</fullName>
    <label>Target Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>